package com.project.template.mapper;

import com.project.template.entity.Notice;
import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import org.apache.ibatis.annotations.Mapper;

/**
 * <p>
 * 栏目表 Mapper 接口
 * </p>
 *
 * 
 */
@Mapper
public interface NoticeMapper extends BaseMapper<Notice> {

}
