package com.project.template.mapper;

import com.project.template.entity.SysUser;
import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import org.apache.ibatis.annotations.Mapper;

/**
 * <p>
 * 用户信息表 Mapper 接口
 * </p>
 *
 * 
 */
@Mapper
public interface SysUserMapper extends BaseMapper<SysUser> {

}
